# RoofPlaneSementation

./: CMakeLists.txt  LICENSE  README.md  airborneRoofPlane.rar
GeneralLibs/: CMakeLists.txt
GeneralLibs/ANN_1.1.2/: CMakeLists.txt
GeneralLibs/ANN_1.1.2/src/: ANN.cpp
GeneralLibs/las/: CMakeLists.txt  lasdefinitions.h  lasreader.cpp  laswriter.cpp  vssver2.scc
examples/: CMakeLists.txt
examples/PointCloudsPlaneExtractor/: CMakeLists.txt  planeExtractionTest.cpp
src/: CMakeLists.txt
src/PlaneExtractor/: AddPointSeedGrow.cpp  AddPointSeedGrow.h  AssistClass.cpp  AssistClass.h  CMakeLists.txt  EightTreePlane.cpp  EightTreePlane.h  FacadeFootprintExtraction.cpp  FacadeFootprintExtraction.h  PlaneMerge.cpp  PlaneMerge.h
src/PlaneExtractor/RegionGrowing/: PCAFunctions.cpp  PCAFunctions.h  PointGrowDis.cpp  PointGrowDis.h
testData/: test1.txt  test2.txt  test3.txt
