#PROJECT(PointCloudsPlaneExtractor)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIC}/lib)

STRING(TOUPPER ${PROJECT_NAME} PROJECT_NAME_CAPITALIZED)

ADD_DEFINITIONS(-DUNICODE)

SET(PROGRAM_TARGETS
	planeExtractionTest
)

INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
#PointCloudsPlaneExtractorLeadorAPI
FOREACH(TARGET_NAME ${PROGRAM_TARGETS})
	ADD_EXECUTABLE( ${TARGET_NAME} ${TARGET_NAME}.cpp )
	ADD_DEPENDENCIES(${TARGET_NAME} PlaneExtractor  )
	TARGET_LINK_LIBRARIES(${TARGET_NAME} PlaneExtractor  ${OpenCV_LIBS})
	#SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES DEFINE_SYMBOL ${PROJECT_NAME_CAPITALIZED}_LIB)#
	SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES FOLDER examples/PointCloudsPlaneExtractor)
ENDFOREACH(TARGET_NAME)
